--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -12,6 +12,7 @@ transform: translate(-50%, -50%);
 .tooltip__trigger {
 	width: 24px;
 	height: 24px;
+	color:var(--active-background);
 }
 .tooltip__icon{
 	width: 100%;
