--- a/07-lection5/04-input/input.css
+++ b/07-lection5/04-input/input.css
@@ -1,10 +1,11 @@
 .input {
 	display: inline-flex;
 	flex-direction: column;
-	
+	padding-right: 15px;
 }
+
 .input_preview {
-margin-bottom: 12px;
+	margin-bottom: 12px;
 }
 
 .input__block {
@@ -32,9 +33,11 @@ margin-bottom: 12px;
 	line-height: 1.3;
 	color: var(--alternate-control);
 }
+
 .input__field_preview::placeholder {
-	font-size:14px;
+	font-size: 14px;
 }
+
 .input__title {
 	font-family: 'Inter';
 	font-style: normal;
@@ -46,8 +49,9 @@ margin-bottom: 12px;
 	color: var(--subtitle);
 	padding-bottom: 5px;
 }
+
 .input__title_preview {
-	color:var(--subtitle);
+	color: var(--subtitle);
 }
 
 .input__icon {
@@ -76,7 +80,7 @@ margin-bottom: 12px;
 }
 
 .input_focus .input__field {
-	border: 1px solid var(--focus-control);
+	border: 1px solid var(--checked-control);
 	box-shadow: 0px 1px 1px rgba(51, 154, 240, 0.1);
 }
 
