--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -1,5 +1,5 @@
 .modal {
-	display: flex;
+	display: none;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
@@ -9,7 +9,8 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-}
+	z-index: 50;
+	}
 
 .modal_preview {
 	position: relative;
@@ -18,6 +19,7 @@
 
 .modal__window {
 	background-color: var(--background-main);
+	background-color:aliceblue;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -26,6 +28,7 @@
 	position: relative;
 	border-radius: 8px;
 	padding: 30px 40px;
+
 }
 
 .modal__window_preview {
