--- a/06-lection4/01-avatar/avatar.css
+++ b/06-lection4/01-avatar/avatar.css
@@ -1,8 +1,9 @@
-.avatar {}
+.avatar {
+	}
 
 .avatar__background {
-	/* width: 102px;
-	height: 102px; */
+	width: 200px;
+	height: 200px;
 	border-radius: 50%;
 	overflow: hidden;
 }
