--- a/07-lection5/01-checkbox/checkbox.css
+++ b/07-lection5/01-checkbox/checkbox.css
@@ -39,6 +39,10 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	color:var(--background-main);
+	width: 24px;
+	height: 24px;
+
 }
 
 .checkbox__title {
