--- a/07-lection5/03-toggler/toggler.css
+++ b/07-lection5/03-toggler/toggler.css
@@ -1,15 +1,3 @@
-/* .title {
-	font-family: 'Inter';
-	font-style: normal;
-	font-weight: 500;
-	font-size: 12px;
-	line-height: 1.5;
-	letter-spacing: 0.04em;
-	text-transform: uppercase;
-	color: var(--alternate-control);
-	padding-bottom: 13px;
-} */
-
 .toggler {
 	display: flex;
 	position: relative;
@@ -38,7 +26,7 @@
 
 	position: relative;
 	cursor: pointer;
-	
+
 }
 
 .toggler__switcher {
@@ -51,7 +39,7 @@
 	left: 2px;
 	transform: translateY(-50%);
 	transition: all .5s ease;
-	}
+}
 
 .toggler__title {
 	font-family: 'Inter';
@@ -72,7 +60,6 @@
 }
 
 .toggler__input:checked~.toggler__state .toggler__switcher {
-	background: var(--background-main);
 	left: 25px;
 }
 
@@ -85,7 +72,7 @@
 }
 
 .toggler__input:disabled~.toggler__state .toggler__switcher {
-	background: var(--alternate-control);
+	background: var(--main-control);
 }
 
 
@@ -97,10 +84,10 @@
 }
 
 .toggler__title_burger {
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-color: var(--font-secondary);
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.5;
+	color: var(--font-secondary);
 }
