--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,9 +87,11 @@
     --gradient-skeleton-3:var(--lite-3);
 
     --subtitle:var(--grey-3);
-    --alternate-control:var(--grey-2);
+    /* --alternate-control:var(--grey-2); */
+    --alternate-control:var(--grey-3);
     --primary-label:var(--grey-4);
     --control-checked:var(--blue-2);
+    --error-control:var(--error);
 
     --main-control:var(--grey-2);
     --label-control:var(--grey-4);
@@ -102,6 +104,7 @@
     --background-secondary:var(--grey-4);
     --font-primary:var(--dark-white);
     --main-icon:var(--grey-1);
+    --main-control:var(--white);
 
 }
 
@@ -115,6 +118,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
     /* width: 100%;
     height: 100%; */
+    /* width: 100vw; */
 }
 
 
