--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -10,55 +10,46 @@
 	left: 0;
 	right: 0;
 	z-index: 50;
-	}
+}
 
 .modal_preview {
+	display: flex;
 	position: relative;
 	padding: 22px 22px;
 }
 
 .modal__window {
 	background-color: var(--background-main);
-	background-color:aliceblue;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	max-width: 508px;
-
 	position: relative;
 	border-radius: 8px;
 	padding: 30px 40px;
-
 }
 
 .modal__window_preview {
 	max-width: 240px;
-	padding:20px 20px;
+	padding: 20px 20px;
 }
 
 .modal__cross {
 	position: absolute;
-	top: 15px;
-	right: 23px;
+	top: 12px;
+	right: 12px;
+	color: #495057;
 }
 
-.modal__cross:before,
-.modal__cross:after {
-	content: '';
-	width: 1px;
-	height: 9px;
-	position: absolute;
-	background-color: #495057;
-	display: block;
+.modal__cross svg {
+	width: 16px;
+	height: 16px;
 }
 
-.modal__cross:before {
-	transform: rotate(45deg);
+.modal__cross:target {
+	display: none;
 }
 
-.modal__cross:after {
-	transform: rotate(-45deg);
-}
 
 .modal__title {
 	font-family: 'Inter';
@@ -73,4 +64,8 @@
 	line-height: 1.5;
 	color: #495057;
 	margin-top: 14px;
+}
+
+.modal:target {
+	display: flex;
 }
