--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -2,18 +2,13 @@
 	position: relative;
 	display: inline-block;
 }
-.tooltip_preview {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-}
 
 .tooltip__trigger{
 	width: 24px;
 	height: 24px;
 	color:var(--active-background);
 }
+
 .tooltip__icon{
 	width: 100%;
 	height: 100%;
@@ -40,6 +35,7 @@ transform: translate(-50%, -50%);
 
 .tooltip__bubble_preview {
 	display: block;
+	margin-bottom: 30px;
 }
 
 .tooltip__bubble:after {
